--- a/index.html
+++ b/index.html
@@ -913,7 +913,7 @@
       </div>
     </footer><!-- End Footer -->
 
-    <div id="preloader"></div>
+    <!-- <div id="preloader"></div> -->
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
     <script type="text/javascript" src="https://unpkg.com/@emailjs/browser@3.11.0/dist/email.min.js">
