--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
-      <div class="container" >
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>About</h2>
@@ -127,7 +127,7 @@
 
     <!-- ======= Facts Section ======= -->
     <!-- <section id="facts" class="facts">
-      <div class="container" >
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Facts</h2>
@@ -175,7 +175,7 @@
 
     <!-- ======= Skills Section ======= -->
     <!-- <section id="skills" class="skills section-bg">
-      <div class="container" >
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Skills</h2>
@@ -241,7 +241,7 @@
 
     <!-- ======= Resume Section ======= -->
     <!-- <section id="resume" class="resume">
-      <div class="container" >
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Resume</h2>
@@ -308,7 +308,7 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio section-bg">
-      <div class="container" >
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Portfolio</h2>
@@ -318,7 +318,7 @@
         </div>
 
         <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center"  >
+          <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" >
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">E-commerce</li>
@@ -328,7 +328,7 @@
           </div>
         </div>
 
-        <div class="row portfolio-container"  >
+        <div class="row portfolio-container" data-aos="fade-up" >
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
@@ -627,7 +627,7 @@
     </div>
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
-      <div class="container" >
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Services</h2>
@@ -735,13 +735,13 @@
 
     <!-- ======= Testimonials Section ======= -->
     <!-- <section id="testimonials" class="testimonials section-bg">
-      <div class="container" >
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Testimonials</h2>
         </div>
 
-        <div class="testimonials-slider swiper"  >
+        <div class="testimonials-slider swiper" data-aos="fade-up" >
           <div class="swiper-wrapper">
 
             <div class="swiper-slide">
@@ -823,7 +823,7 @@
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
-      <div class="container" >
+      <div class="container" data-aos="fade-up">
 
         <div class="section-title">
           <h2>Contact</h2>
