--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </header><!-- End Header -->
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" >
+    <div class="container"  >
       <h1>Website Builder</h1>
       <p>We're <span class="typed" data-typed-items="Designers, Developers, Freelancers"></span></p>
       <div class="social-links">
@@ -636,7 +636,7 @@
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" >
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch"  >
             <div class="icon-box iconbox-blue">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -651,7 +651,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" 
             >
             <div class="icon-box iconbox-orange ">
               <div class="icon">
@@ -667,7 +667,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in"
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" 
             >
             <div class="icon-box iconbox-pink">
               <div class="icon">
@@ -683,7 +683,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" >
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"  >
             <div class="icon-box iconbox-yellow">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -698,7 +698,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" >
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"  >
             <div class="icon-box iconbox-red">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
@@ -713,7 +713,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" >
+          <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4"  >
             <div class="icon-box iconbox-teal">
               <div class="icon">
                 <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
