--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </header><!-- End Header -->
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
-    <div class="container "  >
+    <div class="container "   style="z-index: 22;">
       <h1>Website Builder</h1>
       <p>We're <span class="typed" data-typed-items="Designers, Developers, Freelancers"></span></p>
       <div class="social-links">
