--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <p>We're <span class="typed" data-typed-items="Designers, Developers, Freelancers"></span></p>
       <div class="social-links">
         <a href="https://www.facebook.com/profile.php?id=61552505944635&mibextid=ZbWKwL" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-        <a href="https://instagram.com/aisha_tarek12?igshid=OGQ5ZDc2ODk2ZA==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+        <a href="https://instagram.com/websitebuilder44?igshid=OGQ5ZDc2ODk2ZA==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
         <a href="https://wa.me/+201030975721" class="instagram" target="_blank"><i class="bx bxl-whatsapp"></i></a>
       </div>
     </div>
@@ -896,7 +896,7 @@
         <!-- </p> -->
         <div class="social-links">
           <a href="https://www.facebook.com/profile.php?id=61552505944635&mibextid=ZbWKwL" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-          <a href="https://instagram.com/aisha_tarek12?igshid=OGQ5ZDc2ODk2ZA==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+          <a href="https://instagram.com/websitebuilder44?igshid=OGQ5ZDc2ODk2ZA==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
           <a href="https://wa.me/+201030975721" class="instagram" target="_blank"><i class="bx bxl-whatsapp"></i></a>
 
 
