--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
               <div class="col-lg-6">
                 <ul>
 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+201030975721</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cairo, Egypt</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>builderwebsite436@gmail.com</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
