--- a/index.html
+++ b/index.html
@@ -837,11 +837,11 @@
                 <p>Cairo, Egypt</p>
               </div>
 
-              <!-- <div class="email">
+             <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
-              </div> -->
+                <p>builderwebsite436@gmail.com</p>
+              </div> 
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
