--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Website Builder</title>
+  <title>Aisha Tarek</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -60,11 +60,11 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container "   style="z-index: 22;">
-      <h1>Website Builder</h1>
-      <p>We're <span class="typed" data-typed-items="Designers, Developers, Freelancers"></span></p>
+      <h1>Aisha Tarek</h1>
+      <p>I am <span class="typed" data-typed-items="Designer, Developer, Freelancer"></span></p>
       <div class="social-links">
-        <a href="https://www.facebook.com/profile.php?id=61552505944635&mibextid=ZbWKwL" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-        <a href="https://instagram.com/websitebuilder44?igshid=OGQ5ZDc2ODk2ZA==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+        <a href="https://www.facebook.com/aiesha.tarek?mibextid=ZbWKwL" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/aisha_tarek12?igsh=ODA1NTc5OTg5Nw==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
         <a href="https://wa.me/+201030975721" class="instagram" target="_blank"><i class="bx bxl-whatsapp"></i></a>
       </div>
     </div>
@@ -79,7 +79,7 @@
         <div class="section-title">
           <h2>About</h2>
           <p>
-            At Website Builder, We are a website development company that creates amazing online experiences, we
+            I can create amazing online experiences, I
             understand the power of a well-designed website in capturing attention, engaging visitors, and driving
             conversions. Our team of talented designers and developers work closely with our clients to understand their
             unique goals and translate them into visually captivating and fully functional websites.
@@ -91,9 +91,9 @@
             <img src="assets/img/8-reasons-to-get-a-responsive-website-1000x675.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Web Designers &amp; Web Developers.</h3>
+            <h3>Web Designer &amp; Web Developer.</h3>
             <p class="fst-italic">
-              Our team of skilled designers and developers are passionate about crafting visually appealing and
+               skilled designer and developer  passionate about crafting visually appealing and
               user-friendly websites that help businesses succeed in the digital world.
             </p>
             <div class="row">
@@ -113,7 +113,7 @@
               </div>
             </div>
             <p>
-              At Website Builder , we understand the power of a well-designed website in capturing attention, engaging
+              we understand the power of a well-designed website in capturing attention, engaging
               visitors, and driving conversions. Our team of talented designers and developers work closely with our
               clients to understand their unique goals and translate them into visually captivating and fully functional
               websites. </p>
@@ -891,13 +891,13 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container">
-        <h3>Website Builder</h3>
+        <h3>Aisha Tarek</h3>
         <!-- <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat. -->
         <!-- </p> -->
         <div class="social-links">
-          <a href="https://www.facebook.com/profile.php?id=61552505944635&mibextid=ZbWKwL" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
-          <a href="https://instagram.com/websitebuilder44?igshid=OGQ5ZDc2ODk2ZA==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
-          <a href="https://wa.me/+201030975721" class="instagram" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://www.facebook.com/aiesha.tarek?mibextid=ZbWKwL" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/aisha_tarek12?igsh=ODA1NTc5OTg5Nw==" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
+          <a href="https://wa.me/+01005859044" class="instagram" target="_blank"><i class="bx bxl-whatsapp"></i></a>
 
 
         </div>
