--- a/index.html
+++ b/index.html
@@ -840,13 +840,13 @@
              <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>builderwebsite436@gmail.com</p>
+                <p>aishatarek83@gmail.com</p>
               </div> 
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+201030975721</p>
+                <p>+201005859044</p>
               </div>
 
             </div>
