--- a/index.html
+++ b/index.html
@@ -327,6 +327,99 @@
         </div>
 
         <div class="row portfolio-container"  >
+           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Right Diet </h4>
+                <p>E-commerce</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/projects/project4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Card 2"><i class="bx bx-plus"></i></a>
+                  <div  data-activity-item><i class="bx bx-link"></i></div>
+                </div>
+              </div>
+            </div>
+            <div data-activity-title style="display: none;">
+              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
+              <img src="assets/img/projects/project4-2.png" class="img-fluid" alt="">
+              <img src="assets/img/projects/Diargroups.mp4">
+            </div>
+
+            <div data-activity-titles style="display: none;">
+              <div class="portfolio-info">
+                <h3>Right Diet</h3>
+                <ul>
+                  <li><strong>Category</strong>: Web devolpment</li>
+                  <li><strong>Client</strong>: Right Diet Company</li>
+                  <!-- <li><strong>Project date</strong>: 01 March, 2024</li> -->
+                  <li><strong>Project URL</strong>: <a target="_blank" href="https://www.right-diet.com/"  target="_blank">Right Diet</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>El Agamy Travel Egypt  </h4>
+                <p>Tourism Company</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/projects/project4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Card 2"><i class="bx bx-plus"></i></a>
+                  <div  data-activity-item><i class="bx bx-link"></i></div>
+                </div>
+              </div>
+            </div>
+            <div data-activity-title style="display: none;">
+              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
+              <img src="assets/img/projects/project4-2.png" class="img-fluid" alt="">
+              <img src="assets/img/projects/Diargroups.mp4">
+            </div>
+
+            <div data-activity-titles style="display: none;">
+              <div class="portfolio-info">
+                <h3>El Agamy Travel Egypt</h3>
+                <ul>
+                  <li><strong>Category</strong>: Web devolpment</li>
+                  <li><strong>Client</strong>: El Agamy Travel Egypt Company</li>
+                  <!-- <li><strong>Project date</strong>: 01 December, 2023</li> -->
+                  <li><strong>Project URL</strong>: <a target="_blank" href="https://www.elagamy-eg.com/"  target="_blank">El Agamy Travel Egypt</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>B.Twenty Factory </h4>
+                <p>Plastic Molding Factory</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/projects/project4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                    title="Card 2"><i class="bx bx-plus"></i></a>
+                  <div  data-activity-item><i class="bx bx-link"></i></div>
+                </div>
+              </div>
+            </div>
+            <div data-activity-title style="display: none;">
+              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
+              <img src="assets/img/projects/project4-2.png" class="img-fluid" alt="">
+              <img src="assets/img/projects/Diargroups.mp4">
+            </div>
+
+            <div data-activity-titles style="display: none;">
+              <div class="portfolio-info">
+                <h3>B.Twenty Factory</h3>
+                <ul>
+                  <li><strong>Category</strong>: Web devolpment</li>
+                  <li><strong>Client</strong>: B.Twenty Factory</li>
+                  <!-- <li><strong>Project date</strong>: 01 March, 2023</li> -->
+                  <li><strong>Project URL</strong>: <a target="_blank" href="https://btwenty-factory.com/"  target="_blank">B.Twenty Factory</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
@@ -352,7 +445,7 @@
                 <ul>
                   <li><strong>Category</strong>: Web devolpment</li>
                   <li><strong>Client</strong>: Callisto Vintage brand</li>
-                  <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
+                  <!-- <li><strong>Project date</strong>: 01 novamber, 2020</li> -->
                   <li><strong>Project URL</strong>: <a target="_blank" href="https://callistovintage.com/"  target="_blank">Callisto Vintage</a></li>
                 </ul>
               </div>
@@ -383,7 +476,7 @@
                 <ul>
                   <li><strong>Category</strong>: Web devolpment</li>
                   <li><strong>Client</strong>: The Witchy Hub brand</li>
-                  <!-- <li><strong>Project date</strong>: 01 March, 2020</li> -->
+                  <!-- <li><strong>Project date</strong>: 01 september, 2023</li> -->
                   <li><strong>Project URL</strong>: <a target="_blank" href="https://thewitchyhub.com/" target="_blank">The Witchy Hub</a></li>
                 </ul>
               </div>
