--- a/index.html
+++ b/index.html
@@ -329,21 +329,21 @@
         <div class="row portfolio-container"  >
            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
+              <img src="assets/img/img(1).png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Right Diet </h4>
                 <p>E-commerce</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/projects/project4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  <a href="assets/img/img(1).png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Card 2"><i class="bx bx-plus"></i></a>
                   <div  data-activity-item><i class="bx bx-link"></i></div>
                 </div>
               </div>
             </div>
             <div data-activity-title style="display: none;">
-              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
-              <img src="assets/img/projects/project4-2.png" class="img-fluid" alt="">
-              <img src="assets/img/projects/Diargroups.mp4">
+              <img src="assets/img/img(1).png" class="img-fluid" alt="">
+              <img src="assets/img/img(2).png" class="img-fluid" alt="">
+              <img src="assets/img/img(3).png" class="img-fluid" alt="">
             </div>
 
             <div data-activity-titles style="display: none;">
@@ -360,21 +360,21 @@
           </div>
              <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
+              <img src="assets/img/img(6).png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>El Agamy Travel Egypt  </h4>
                 <p>Tourism Company</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/projects/project4.png" data-gallery="portfolioGallery" class="portfolio-lightbox"
+                  <a href="assets/img/img(6).png" data-gallery="portfolioGallery" class="portfolio-lightbox"
                     title="Card 2"><i class="bx bx-plus"></i></a>
                   <div  data-activity-item><i class="bx bx-link"></i></div>
                 </div>
               </div>
             </div>
             <div data-activity-title style="display: none;">
-              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
-              <img src="assets/img/projects/project4-2.png" class="img-fluid" alt="">
-              <img src="assets/img/projects/Diargroups.mp4">
+              <img src="assets/img/img(6).png" class="img-fluid" alt="">
+              <img src="assets/img/img(7).png" class="img-fluid" alt="">
+              <img src="assets/img/img(8).png" class="img-fluid" alt="">
             </div>
 
             <div data-activity-titles style="display: none;">
@@ -391,7 +391,7 @@
           </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
+              <img src="assets/img/img(9).png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>B.Twenty Factory </h4>
                 <p>Plastic Molding Factory</p>
@@ -403,9 +403,9 @@
               </div>
             </div>
             <div data-activity-title style="display: none;">
-              <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
-              <img src="assets/img/projects/project4-2.png" class="img-fluid" alt="">
-              <img src="assets/img/projects/Diargroups.mp4">
+              <img src="assets/img/img(9).png" class="img-fluid" alt="">
+              <img src="assets/img/img(4).png" class="img-fluid" alt="">
+              <img src="assets/img/img(5).png" class="img-fluid" alt="">
             </div>
 
             <div data-activity-titles style="display: none;">
@@ -436,7 +436,6 @@
             <div data-activity-title style="display: none;">
               <img src="assets/img/projects/project4.png" class="img-fluid" alt="">
               <img src="assets/img/projects/project4-2.png" class="img-fluid" alt="">
-              <img src="assets/img/projects/Diargroups.mp4">
             </div>
 
             <div data-activity-titles style="display: none;">
