--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
               <div class="col-lg-6">
                 <ul>
 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+201030975721</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+201005859044</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Cairo, Egypt</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>builderwebsite436@gmail.com</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>aishatarek83@gmail.com</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
             </div>
             <p>
-              we understand the power of a well-designed website in capturing attention, engaging
-              visitors, and driving conversions. Our team of talented designers and developers work closely with our
+              i understand the power of a well-designed website in capturing attention, engaging
+              visitors, and driving conversions. i work closely with my
               clients to understand their unique goals and translate them into visually captivating and fully functional
               websites. </p>
           </div>
@@ -310,7 +310,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Our portfolio represents a collection of our proudest achievements in website development. Each project
+          <p>my portfolio represents a collection of our proudest achievements in website development. Each project
             showcases our creativity, attention to detail, and commitment to delivering exceptional online solutions.
             Take a look at some of our notable works.</p>
         </div>
